--- a/customReact/index.html
+++ b/customReact/index.html
@@ -6,7 +6,7 @@
     <title>Custom React App</title>
 </head>
 <body>
-    <div class="root">
+    <div id="root">
     </div>
     <script src="./customreact.js"></script>
 </body>
